# Time_Ifes_Vitoria

./: CMakeLists.txt  README.md  challenge.launch  movement.py  package.xml  readme.md  ur5_control.py
Atualizado/: readme.md
Atualizado/config/: simulation_parameters.yaml
Atualizado/launch/: challenge.launch  load_parameters.launch
Atualizado/script/: create_trajectory.py  detect_roll.py  main_control.py  movement.py  object_control.py  trajectory_parameters.py  ur5Camera.py
launch/: challenge.launch
rosi_challenge/: CMakeLists.txt  package.xml  readme.md
rosi_challenge/launch/: challenge.launch
rosi_challenge/script/: 3proof_of_concept_control.py  cpmo.py  create_trajectory.py  detect_roll.py  fire_detection.py  hokuyo.py  kinect_compensation.py  kinect_control.py  main_control.py  mapa.py  movement.py  obj_dect.py  object_detection.py  proof_of_concept_control.py  trajectory_parameters.py  ur5Camera.py
script/: cpo.py  create_trajectory.py  detect_roll.py  kinect_compensation.py  main_control.py  mapa-13.py  movement.py  object_control.py  object_detection.py  object_velodyne.py  trajectory_parameters.py  ur5Camera.py  ur5_control.py
