<?xml version="1.0"?>
<package format="2">
  <name>Time_Ifes_Vitoria</name>
  <version>0.0.0</version>
  <description>The Time_Ifes_Vitoria</description>

  <maintainer email="antonio@todo.todo">antonio</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
